--- a/doc_scrapper/scrapper_rustdoc.ipynb
+++ b/doc_scrapper/scrapper_rustdoc.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-01-17T09:07:31.083062Z",
-     "start_time": "2025-01-17T09:07:31.079810Z"
-    }
+    "collapsed": true
    },
    "source": [
     "import requests\n",
@@ -17,15 +13,10 @@
     "import os"
    ],
    "outputs": [],
-   "execution_count": 12
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-17T09:07:31.268414Z",
-     "start_time": "2025-01-17T09:07:31.265287Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "BASE_URL = \"https://docs.rs\"\n",
@@ -33,15 +24,10 @@
    ],
    "id": "a1615ccdbceb49de",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-17T09:38:23.175398Z",
-     "start_time": "2025-01-17T09:38:23.170152Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "def to_markdown(html_content):\n",
@@ -66,15 +52,10 @@
    ],
    "id": "dcfd7f29b7724c4b",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-17T09:38:23.344465Z",
-     "start_time": "2025-01-17T09:38:23.341119Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "def get_soup(url):\n",
@@ -85,15 +66,10 @@
    ],
    "id": "525d87323e4380bd",
    "outputs": [],
-   "execution_count": 32
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-17T09:42:08.459617Z",
-     "start_time": "2025-01-17T09:42:08.455395Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "def extract_main_content(soup):\n",
@@ -114,15 +90,10 @@
    ],
    "id": "d2443d5fb83d37b",
    "outputs": [],
-   "execution_count": 37
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-17T09:42:08.678021Z",
-     "start_time": "2025-01-17T09:42:08.673064Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "def get_doc_links(soup):\n",
@@ -165,15 +136,10 @@
    ],
    "id": "d4cee9337bd16932",
    "outputs": [],
-   "execution_count": 38
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-17T09:42:08.789029Z",
-     "start_time": "2025-01-17T09:42:08.784016Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "def scrape_ndarray_docs():\n",
@@ -201,7 +167,7 @@
     "                page_content_html = extract_main_content(page_soup)\n",
     "                page_content_md = to_markdown(page_content_html)\n",
     "                \n",
-    "                all_docs_md += f\"## Page : {link}\\n\\n\"\n",
+    "                all_docs_md += f\"# Page : {link}\\n\\n\\n\"\n",
     "                all_docs_md += page_content_md + \"\\n\\n\"\n",
     "                \n",
     "            except Exception as e:\n",
@@ -213,49 +179,31 @@
    ],
    "id": "ab7efae425ff1477",
    "outputs": [],
-   "execution_count": 39
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-17T09:42:08.967988Z",
-     "start_time": "2025-01-17T09:42:08.902979Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "scrape_ndarray_docs()",
-   "id": "bcd72e48b2b28989",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
-   "execution_count": 40
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-17T09:42:09.113744Z",
-     "start_time": "2025-01-17T09:42:09.111087Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "5675a6459747b6d0",
-   "outputs": [],
-   "execution_count": 40
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
+   "source": "scrape_ndarray_docs()",
+   "id": "bcd72e48b2b28989",
    "outputs": [],
-   "execution_count": null,
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": "",
-   "id": "ada7b1d779fc8581"
+   "id": "5675a6459747b6d0",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "ada7b1d779fc8581",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
