--- a/src/notebook/RAG_TD_ESGI.ipynb
+++ b/src/notebook/RAG_TD_ESGI.ipynb
@@ -173,9 +173,164 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "# eval retrieval ",
+   "id": "bc4ca5597ec81751"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "list_question = [\"How to make a sum of tensor\", \"what is burn\"]\n",
+    "list_answer = [\"fn add\", \"crate\"]"
+   ],
+   "id": "93f82b0f62efd0a4",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## MRR ",
+   "id": "13f278e1832474da"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "df  = pd.DataFrame({\"question\": list_question, \"answer\": list_answer})",
+   "id": "9d0d3e7527bd2369",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "df",
+   "id": "6cdb3a334d7e14ee",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "query_embedding = model.encode(list(df[\"question\"]))\n",
+    "query_embedding"
+   ],
+   "id": "fbf204ae45b7f1ea",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "acceptable_chunks = []\n",
+    "for answer in df[\"answer\"]:\n",
+    "    chunks_ok = set(i for i, chunk in enumerate(chunks) if answer in chunk)\n",
+    "    acceptable_chunks.append(chunks_ok)\n",
+    "acceptable_chunks"
+   ],
+   "id": "e4a34fe5bac54971",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def compute_mrr(sim_score, acceptable_chunks):\n",
+    "    ranks = []\n",
+    "    for this_score, this_acceptable_chunks in zip(sim_score, acceptable_chunks):\n",
+    "        indexes = reversed(np.argsort(this_score))\n",
+    "        rank = 1 + next(i for i, idx in enumerate(indexes) if idx in this_acceptable_chunks)\n",
+    "        ranks.append(rank)\n",
+    "        \n",
+    "    return {\n",
+    "        \"score\": sum(1 / r if r < 6 else 0 for r in ranks) / len(ranks),\n",
+    "        \"ranks\": ranks,\n",
+    "    }"
+   ],
+   "id": "f8d8b5597f33df2",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "sim_scores = query_embedding @ corpus_embedding.T",
+   "id": "677ad0a2305f5aa5",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "res = compute_mrr(sim_scores, acceptable_chunks)\n",
+    "res[\"score\"]"
+   ],
+   "id": "2c5cb8da0a852fae",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## text generation",
+   "id": "1ecdc7c4be003c52"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def get_context(query, corpus, corpus_embeddings):\n",
+    "    query_embedding = model.encode([query])\n",
+    "    sim_scores = query_embedding @ corpus_embedding.T\n",
+    "    indexes = list(np.argsort(sim_scores[0]))[-5:]\n",
+    "    return [corpus[i] for i in indexes]"
+   ],
+   "id": "b242557a23a2091c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "get_context(\"how to sum two tensor\", chunks, corpus_embedding)",
+   "id": "fe1c612e662dcd3",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# smoll",
+   "id": "8c4fad4c65f35a69"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "\n",
+    "checkpoint = \"HuggingFaceTB/SmolLM2-360M-Instruct\"\n",
+    "# checkpoint = \"HuggingFaceTB/SmolLM2-1.7B-Instruct\"\n",
+    "\n",
+    "device = \"cpu\" # for GPU usage or \"cpu\" for CPU usage\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
+    "model_generator = AutoModelForCausalLM.from_pretrained(checkpoint).to(device)"
+   ],
+   "id": "719721332d1dac7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": "",
-   "id": "93f82b0f62efd0a4",
+   "id": "58a5a0db72e1d95b",
    "outputs": [],
    "execution_count": null
   }
