add more structure and tests

--- a/src/notebook/rag_experimentation.ipynb
+++ b/src/notebook/rag_experimentation.ipynb
@@ -8,9 +8,8 @@
     "\n",
     "from src.config import DOCUMENTS_DIR, TEST_DIR\n",
     "from src.llm_query import call_llm\n",
-    "from src.retriever import retreive_response, get_fittest_chunk, tfidf_vectorizer\n",
-    "from src.chunk import truckates_h2, find_chunk_indices_with_title\n",
-    "import prompt\n",
+    "from src.retriever import jaccard_retriever, get_fittest_chunk, tfidf_retriever\n",
+    "from src.chunk import trunkate_on_h2, find_chunk_indices_with_title\n",
     "import requests\n",
     "import json\n",
     "\n",
@@ -36,8 +35,14 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "## trucate file into chunks",
+   "id": "f154c6faa096b3a"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "source": "chunks = truckates_h2(texts)",
+   "source": "chunks = trunkate_on_h2(texts)",
    "id": "198386ed366c2f5b",
    "outputs": [],
    "execution_count": null
@@ -90,7 +95,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "fittest_doc_id = tfidf_vectorizer(chunks, eval_json[0]['question'])\n",
+    "fittest_doc_id = tfidf_retriever(chunks, eval_json[0]['question'])[0]\n",
     "fittest_doc = chunks[fittest_doc_id]"
    ],
    "id": "aa91eb282d28e34d",
@@ -108,8 +113,40 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "response = call_llm(eval_json[0]['question'], fittest_doc=\"llama2\")",
+   "source": "response = call_llm(eval_json[0]['question'], fittest_doc,llm=\"llama2\")",
    "id": "b424cd7a36258911",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "response",
+   "id": "608135158c282013",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "from src.evaluation import evaluate_rag",
+   "id": "abc4b3deec1bd162",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "evaluate_rag(eval_json, tfidf_retriever, call_llm, chunks)",
+   "id": "d08c3fcb71325f9e",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "3258780177f32edd",
    "outputs": [],
    "execution_count": null
   }
