feature: evaluate pipeline working

--- a/doc_scrapper/scrapper_rustdoc.ipynb
+++ b/doc_scrapper/scrapper_rustdoc.ipynb
@@ -184,7 +184,9 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "scrape_ndarray_docs()",
+   "source": [
+    "scrape_ndarray_docs()"
+   ],
    "id": "bcd72e48b2b28989",
    "outputs": [],
    "execution_count": null
@@ -192,7 +194,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": [],
    "id": "5675a6459747b6d0",
    "outputs": [],
    "execution_count": null
@@ -200,7 +202,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": [],
    "id": "ada7b1d779fc8581",
    "outputs": [],
    "execution_count": null
