--- a/src/notebook/rag_experimentation.ipynb
+++ b/src/notebook/rag_experimentation.ipynb
@@ -14,7 +14,8 @@
     "from src.config import DOCUMENTS_DIR, TEST_DIR\n",
     "from src.llm_query import call_llm\n",
     "from src.retriever import jaccard_retriever, get_fittest_chunk, tfidf_retriever\n",
-    "from src.chunk import trunkate_on_h2, find_chunk_indices_with_title\n",
+    "from src.chunk import truncate_on_h2, find_chunk_indices_with_title\n",
+    "from src.prompt import build_prompt\n",
     "import requests\n",
     "import json\n",
     "\n",
@@ -67,9 +68,7 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "chunks = trunkate_on_h2(texts)"
-   ],
+   "source": "chunks = truncate_on_h2(texts)",
    "id": "198386ed366c2f5b",
    "outputs": [],
    "execution_count": 4
@@ -188,9 +187,15 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "response = call_llm(eval_json[0]['question'], fittest_doc,llm=\"llama2\")"
-   ],
+   "outputs": [],
+   "execution_count": null,
+   "source": "prompt = build_prompt(eval_json[0]['question'], fittest_doc)",
+   "id": "615957f0cbefcbb5"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "response = call_llm(prompt ,llm=\"llama2\")",
    "id": "b424cd7a36258911",
    "outputs": [],
    "execution_count": null
